removed hover on mobile and fix bug page

--- a/src/components/Characters/Characters.module.css
+++ b/src/components/Characters/Characters.module.css
@@ -73,6 +73,9 @@
       margin-right: auto;
       margin-left: auto;
     }
+    .card_character:hover{
+      transform: none;
+    }
   }
 
 
